# copyfolder

./: LICENSE  README.md  pyproject.toml
src/: __init__.py  setup.py
src/copyfolder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
